Return value of window.onerror has inverted semantics https://bugs.webkit.org/show_bug.cgi?id=67119

Source/WebCore:

Error is now treated as handled only when window.onerror function returns true.

Reviewed by Darin Adler.

Test: fast/events/window-onerror13.html

* bindings/js/JSErrorHandler.cpp:
(WebCore::JSErrorHandler::handleEvent):
* bindings/v8/V8WindowErrorHandler.cpp:
(WebCore::V8WindowErrorHandler::callListenerFunction):
* bindings/v8/V8WorkerContextErrorHandler.cpp:
(WebCore::V8WorkerContextErrorHandler::callListenerFunction):

LayoutTests:

Reviewed by Darin Adler.

* fast/events/window-onerror1.html:
* fast/events/window-onerror11.html:
* fast/events/window-onerror12.html:
* fast/events/window-onerror13-expected.txt: Added.
* fast/events/window-onerror13.html: Copied from LayoutTests/fast/events/window-onerror11.html.
* fast/events/window-onerror2.html:
* fast/events/window-onerror3.html:
* fast/events/window-onerror4.html:
* fast/events/window-onerror5.html:
* fast/events/window-onerror6.html:
* fast/events/window-onerror8.html:
* fast/events/window-onerror9.html:
* fast/workers/resources/worker-script-error-bubbled.js:
(onerror):
* fast/workers/resources/worker-script-error-handled.js:
(onerror):
* http/tests/security/window-onerror-exception-in-iframe.html:

Canonical link: https://commits.webkit.org/82991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94061 268f45cc-cd09-0410-ab3c-d52691b4dbfc