LayoutTests/fast/workers/resources/worker-script-error-bubbled.js
@@ -4,7 +4,7 @@ onerror = function(message, url, lineno)
         postMessage("FAIL: Bad location. Actual: " + url + " Expected: " + location.href);
     splitUrl = url.split('/');
     postMessage("PASS: onerror in worker context invoked for a script that has script error '" + message + "' at line " + lineno + " in " + splitUrl[splitUrl.length - 1]);
-    return true;
+    return false;
 }
 
 foo.bar = 0;
