LayoutTests/fast/workers/resources/worker-script-error-handled.js
@@ -1,7 +1,7 @@
 onerror = function(message, url, lineno)
 {
     postMessage("onerror invoked for a script that has script error '" + message + "' at line " + lineno);
-    return false;
+    return true;
 }
 
 foo.bar = 0;
